fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 .app {
-  margin-top: 40px;
+  margin-top: 30px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -13,7 +13,7 @@
 }
 
 .game-header {
-  margin-top: 45px;
+  margin-top: 55px;
   min-width: 380px;
   text-align: center;
   color: white;
@@ -68,6 +68,7 @@
 
 .instructions1 {
   font-size: 16px;
+  margin-top: 4px;
   text-align: right;
   color: white;
   text-align: center;
@@ -94,6 +95,7 @@
 
 .instructions2 {
   font-size: 16px;
+  margin-top: 4px;
   text-align: right;
   color: white;
   text-align: center;
@@ -120,6 +122,7 @@
 
 .instructions3 {
   font-size: 16px;
+  margin-top: 4px;
   text-align: right;
   color: white;
   text-align: center;
